# shardlog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  deploy-x64.sh  vcpkg.json
examples/: bertan_out.csv  commands.yaml  config.ini  korad_out.csv  korad_out.txt
scripts/: deploy-x64.sh
src/: application.cpp  application.hpp  config.hpp  config_parser.cpp  config_parser.hpp  main.cpp  measurer.cpp  measurer.hpp  meter.hpp  visa_resources.hpp
src/config/: command_parser.hpp  config_parser.cpp  config_parser.hpp  set_value_parser.hpp
src/hardware/: config.hpp  meter.hpp  utils.cpp  utils.hpp  visa_instrument.cpp  visa_instrument.hpp
src/hardware/serial/: ListSerial.cpp  ListSerial.hpp  TimeoutSerial.cpp  TimeoutSerial.hpp
src/hardware/visa/: commands.hpp  resources.cpp  resources.hpp
src/measurer/: measurer.cpp  measurer.hpp  setter.hpp
src/meter/: meter.cpp  meter.hpp
src/meter/connection/: comport.cpp  comport.hpp  connection.cpp  connection.hpp  nivisa.cpp  nivisa.hpp
src/ui/: console_choose.hpp
src/utils/: string.hpp
